fixed bugs with scrollbar on docs page

--- a/app/globals.css
+++ b/app/globals.css
@@ -19,6 +19,7 @@
   --gradient-transparent: linear-gradient(transparent, transparent);
   --color-ssw-red: #cc4141;
   --color-ssw-charcoal: #333333;
+  --color-gray-darkest: #141414;
   --breakpoint-small: 43.75em;
   --breakpoint-medium: 75rem;
 }
